--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/main.rs"
 [dependencies]
 dirs = "4.0.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
-rustix = {version = "0.36.8", features = ["process"]}
+rustix = {version = "0.36.8", features = ["process", "use-libc"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.93"
 
